# TTS

./: .gitignore  belle_hierarchical.ipynb  exp1.ipynb  exp1_fixed.ipynb  projection.py  pyproject.toml
.ipynb_checkpoints/: exp1-checkpoint.ipynb
